--- a/Smiley_UNet_(PyTorch).ipynb
+++ b/Smiley_UNet_(PyTorch).ipynb
@@ -6,7 +6,7 @@
       "name": "Smiley UNet (PyTorch)",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPnNvteKj0b6u+JTeJNl9Z6",
+      "authorship_tag": "ABX9TyN7PXiadR9wic3G+scRJL/+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -530,13 +530,13 @@
         "    for c1_name, c1 in model.named_children():\r\n",
         "        l = 0\r\n",
         "        ll = 0\r\n",
-        "        for c2_name, c2 in c1.children():\r\n",
+        "        for c2_name, c2 in c1.named_children():\r\n",
         "            l+=1\r\n",
         "            ll = 0\r\n",
-        "            for c3_name, c3 in c2.children():\r\n",
+        "            for c3_name, c3 in c2.named_children():\r\n",
         "                ll+=1\r\n",
         "                lll = 0\r\n",
-        "                for c4_name, c4 in c3.childre():\r\n",
+        "                for c4_name, c4 in c3.named_children():\r\n",
         "                    lll+=1\r\n",
         "                if lll == 0:\r\n",
         "                    row = [counter1]\r\n",
@@ -580,7 +580,7 @@
         "\r\n",
         "    print(tabulate(all_rows, headers, tablefmt=\"grid\"))"
       ],
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": []
     },
     {
